line-smt-apis/force-app/main/default/objects/ActivityCarTest__c.object
<CustomObject>
    <fields>
        <fullName>ActivityCarTestDate__c</fullName>
        <label>預約試駕日期</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActivityID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Activity ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CarStyle__c</fullName>
        <label>車型</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarTestRoute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>試駕路線</label>
        <referenceTo>CarTestRoute__c</referenceTo>
        <relationshipLabel>預約試駕</relationshipLabel>
        <relationshipName>ActivityCarTestToCarTestRoute</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChooseMethod__c</fullName>
        <label>選擇業代方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>自行指定</fullName>
                </value>
                <value>
                    <fullName>系統分配</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Companion__c</fullName>
        <label>同行伴侶</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>自己1人</fullName>
                </value>
                <value>
                    <fullName>和家人</fullName>
                </value>
                <value>
                    <fullName>和朋友</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>經銷商名稱</label>
        <referenceTo>Dealer__c</referenceTo>
        <relationshipLabel>預約試駕</relationshipLabel>
        <relationshipName>ActivityCarTestToDealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExSalesRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>前銷售業代</label>
        <referenceTo>SalesRepresentative__c</referenceTo>
        <relationshipLabel>預約試駕 (前銷售業代)</relationshipLabel>
        <relationshipName>ActivityCarTestToExSalesRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GarageTestRequirement__c</fullName>
        <label>試車庫需求</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>需要</fullName>
                </value>
                <value>
                    <fullName>不需要</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastTestCarStyle__c</fullName>
        <label>最後試乘車型</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>潛客</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>預約試駕</relationshipLabel>
        <relationshipName>ActivityCarTestToLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LineActivityCarTestID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Line 預約試駕 ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>會員姓名</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>預約試駕</relationshipLabel>
        <relationshipName>ActivityCarTestToMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PowerType__c</fullName>
        <label>動力</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PurchaseDecision__c</fullName>
        <label>是否購車</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>買車了好興奮</fullName>
                </value>
                <value>
                    <fullName>尚未決定購車</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SafetySeatQuantity__c</fullName>
        <label>安全座椅張數</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SafetySeatRequirement__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1張</fullName>
                </value>
                <value>
                    <fullName>2張</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SafetySeatRequirement__c</fullName>
        <label>安全座椅需求</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>需要</fullName>
                </value>
                <value>
                    <fullName>不需要</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>銷售業代</label>
        <referenceTo>SalesRepresentative__c</referenceTo>
        <relationshipLabel>預約試駕</relationshipLabel>
        <relationshipName>ActivityCarTestToSalesRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <label>滿意度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>預約狀態</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>待確認</fullName>
                </value>
                <value>
                    <fullName>已確認</fullName>
                </value>
                <value>
                    <fullName>已取消</fullName>
                </value>
                <value>
                    <fullName>已完成</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>預約試駕</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LineActivityCarTestID__c</columns>
        <columns>Member__c</columns>
        <columns>SalesRepresentative__c</columns>
        <columns>Status__c</columns>
        <columns>CarTestRoute__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>預約試駕編號</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>