line-smt-apis/force-app/main/default/objects/ActivityCarTest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LineActivityCarTestID__c</columns>
    <columns>Member__c</columns>
    <columns>SalesRepresentative__c</columns>
    <columns>Status__c</columns>
    <columns>CarTestRoute__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>